--- a/Eduversity.com/Client/Pages/LoginPages/ChangePassword.razor
+++ b/Eduversity.com/Client/Pages/LoginPages/ChangePassword.razor
@@ -51,7 +51,7 @@
 </div>
 
 @code {
-    UserChangePassword request = new UserChangePassword();
+    UserChangePasswordRequest request = new UserChangePasswordRequest();
     string message = string.Empty;
     string messageCssClass = string.Empty;
     [Parameter]
@@ -81,7 +81,7 @@
                 messageCssClass = "text-warning";
                 toastService.ShowWarning(message);
             }
-            request = new UserChangePassword();
+            request = new UserChangePasswordRequest();
         }
         catch (Exception ex)
         {
