--- a/Eduversity.com/Client/Shared/Layouts/MenuAdmin.razor
+++ b/Eduversity.com/Client/Shared/Layouts/MenuAdmin.razor
@@ -8,7 +8,7 @@
         <li class="nav-item px-1">
             <NavLink class="nav-link" href="admin/account">
                 <span class="oi oi-key" aria-hidden="true"></span>
-                Account
+                My Account
             </NavLink>
         </li>
         <hr />
@@ -65,5 +65,6 @@
             </li>
         }
         <hr />
+        <MenuCreateUsers />
     </Authorized>
 </AuthorizeView>
