--- a/Eduversity.com/Client/Shared/Layouts/LoginDisplay.razor
+++ b/Eduversity.com/Client/Shared/Layouts/LoginDisplay.razor
@@ -1,25 +1,24 @@
-﻿
-@inject ILocalStorageService LocalStorage
+﻿@inject ILocalStorageService LocalStorage
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager NavigationManager
 
 <AuthorizeView>   
     <NotAuthorized>            
-        <NavLink class="nav-link" href="signup">
+        <NavLink class="nav-link" href="student/signup">
             Create Account
         </NavLink>
-        <NavLink class="nav-link" href="signin">
+        <NavLink class="nav-link" href="student/signin">
             Login
         </NavLink>
     </NotAuthorized>
     <Authorized>
-            <h6>Welcome: <i>@(context.User.Identity?.Name!)</i></h6>
-            @*<NavLink class="nav-link" href="change-password">
-                Change Password
-            </NavLink>*@
-            <NavLink class="nav-link" href="#" @onclick="Logout">
-                Logout
-            </NavLink>            
+        <h6>Welcome: <i>@(context.User.Identity?.Name!)</i></h6>
+        <NavLink class="nav-link" href="change-password">
+            Change Password
+        </NavLink>
+        <NavLink class="nav-link" href="#" @onclick="Logout">
+            Logout
+        </NavLink>
     </Authorized>
 </AuthorizeView>        
 
@@ -34,7 +33,7 @@
         {
             await LocalStorage.RemoveItemAsync("authToken");
             await AuthenticationStateProvider.GetAuthenticationStateAsync();
-            NavigationManager.NavigateTo("/signin");
+            NavigationManager.NavigateTo("");
         }
         catch (Exception ex)
         {
