--- a/Eduversity.com/Client/_Imports.razor
+++ b/Eduversity.com/Client/_Imports.razor
@@ -6,8 +6,18 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+
 @using Eduversity.com.Client
 @using Eduversity.com.Client.Shared
+@using Eduversity.com.Client.Shared.Courses
+@using Eduversity.com.Client.Shared.Departments
+@using Eduversity.com.Client.Shared.Layouts
+@using Eduversity.com.Client.Shared.Lecturers
+@using Eduversity.com.Client.Shared.Prompts
+@using Eduversity.com.Client.Shared.Searching
+@using Eduversity.com.Client.Shared.Students
+@using Eduversity.com.Client.Shared.Users
+
 @using Blazored.Toast
 @using Blazored.Toast.Configuration
 @using Blazored.LocalStorage
